--- a/Електронная Газета/Files/index.html
+++ b/Електронная Газета/Files/index.html
@@ -17,6 +17,7 @@
         <li> <p> <a href="EntryPoint.html">Немного об "Entry Point"</a> Игра по типу Hitman в Roblox</p></li>
         <li> <p><a href="MichaelsZombies.html">Немного об "Michaels Zombies"</a> Игра по типу Call of Duty Zombies в Roblox</p></li>
     </font></ul>
-
+  
+   <a href="skype:itgen7?chat"><img src="../Images/1280px-Skype_logo_(fully_transparent).svg.png" alt="Skype logo" align="left" width="150" height="75"></a>
 </body>
 </html>
