--- a/Електронная Газета/Files/Specter2.html
+++ b/Електронная Газета/Files/Specter2.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body bgcolor="#E6E6FA">
+    <font color="#00CED1" size="6"><h1 align="center">Gamer-Weekends</h1></font>
+
+   <font color="#6495ED" size="6"><h3 align="center">Выпуск #1 Тема Роблокс</h3></font> 
+    <hr>
     <a href="index.html">|Главная|</a>
     <p>«Spectre 2» — игра, вдохновленная фазмофобией. Суть игры заключается в том, чтобы определить тип призрака по 7 различным характеристикам и выбрать только 3 из них. Призрак может оставлять отпечатки пальцев, совершать паранормальные движения, оставлять сферы, которые можно увидеть через специальные очки, и многое другое.</p>
-    <img src="" alt="">
+    <img src="../Images/maxresdefault.jpg" alt="" width="800" height="500">
 </body>
 </html>
