--- a/Моя соцсеть/MyProfile/album.html
+++ b/Моя соцсеть/MyProfile/album.html
@@ -10,8 +10,21 @@
     <h2>Фотоальбом</h2>
     <a href="index.html">закрыть</a>
     <hr>
-    <img src="../images/photos/Bjerkebygget.jpg" alt="" width="300" height="200" vspace="5" hspace="5">
-    <img src="../images/photos/RFO-1400x919-Jimmys-Steak-for-two-73e9d0dc-02fa-43c3-af20-6a32fc86d1e9-0-1400x919.jpg" alt=""  width="300" height="200" vspace="5" hspace="5">
-    <img src="../images/photos/811461b8d1cacf1f2da791b478dccfe2a55457780364c3d5a95fbfcdd4c3086f.avif" alt="" width="370" height="200" vspace="5" hspace="5">
+    <a href="../images/gallery/school.html"><img src="../images/photos/Bjerkebygget.jpg" alt="" width="300" height="200" vspace="5" hspace="5"></a>
+    <a href="../images/gallery/food.html"><img src="../images/photos/RFO-1400x919-Jimmys-Steak-for-two-73e9d0dc-02fa-43c3-af20-6a32fc86d1e9-0-1400x919.jpg" alt=""  width="300" height="200" vspace="5" hspace="5"></a>
+    <a href="../images/gallery/minecraft.html"><img src="../images/photos/811461b8d1cacf1f2da791b478dccfe2a55457780364c3d5a95fbfcdd4c3086f.avif" alt="" width="370" height="200" vspace="5" hspace="5"></a>
+    <a href="../images/gallery/entryPoint.html"><img src="../images/photos/EntryPoint.jpg" alt="" width="370" height="200" vspace="5" hspace="5"></a>
+    <a href="../images/gallery/specter.html"><img src="../images/photos/maxresdefault.jpg" alt="" width="370" height="200" vspace="5" hspace="5"></a>
+    <a href="../images/gallery/ow.html"><img src="../images/photos/overwatch-emblem.jpg" alt="" width="370" height="200" vspace="5" hspace="5"></a>
+    <a href="../images/gallery/al.html"> <img src="../images/photos/Png.png" alt="" width="370" height="200" vspace="5" hspace="5"></a>
+    <a href="../images/gallery/gd.html"><img src="../images/photos/Geometry_Dash_Logo.png" alt="" width="200" height="200" vspace="5" hspace="5"></a>
+    <a href="../images/gallery/rus.html"><img src="../images/photos/Flag_of_Russia.svg.webp" alt="" width="300" height="200" vspace="5" hspace="5"></a>
+    <a href="../images/gallery/norw.html"><img src="../images/photos/Flag_of_Norway.svg.png" alt="" width="300" height="200" vspace="5" hspace="5"></a>
+
+
+
+
+
+
 </body>
 </html>
