--- a/Сайт про Айтигеника/html/about/name.html
+++ b/Сайт про Айтигеника/html/about/name.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Айтигеник</title>
 </head>
 <body>
+    <ul>
+        <li><a href="../main.html">Главная страница</a></li>
+        <li><a href="name.html">Айтигеник</a></li>
+        <li><a href="skills.html">Способности Айтигеника</a></li>
+    </ul>
     <h1>Айтигеник!</h1>
     <p>Айтигеник - это робот, созданный тренерами Айтигенио для помощи ребятам в учебе!</p>
+    <a href="album.html">Фотоальбом</a>
 </body>
 </html>
