--- a/Сайт про Айтигеника/html/about/skills.html
+++ b/Сайт про Айтигеника/html/about/skills.html
@@ -28,17 +28,17 @@
             <th>Описание</th>
         </tr>
         <tr>
-            <td>Python</td>
+            <td><a href="https://itgen.io/programmirovanie/python" target="_blank">Python</a></td>
             <td><img src="../../images/python.png" alt="" width="100" height="100"></td>
             <td>Python - язык программирования высокого уровня, который используется для разработки веб-приложений, научных вычислений, искусственного интеллекта, анализа данных и многого другого. Он прост в изучении и имеет богатую стандартную библиотеку.</td>
         </tr>
         <tr>
-            <td>HTML</td>
+            <td><a href="https://itgen.io/programmirovanie/web-programming" target="_blank">HTML</a></td>
             <td><img src="../../images/html.png" alt="" width="100" height="100"></td>
             <td>HTML - это язык разметки гипертекста, который используется для создания веб-страниц. С его помощью вы можете определить структуру и содержание веб-страницы, а также встраивать изображения, видео и другие мультимедийные элементы.</td>
         </tr>
         <tr>
-            <td>GameMaker</td>
+            <td> <a href="https://itgen.io/programmirovanie/gamemaker" target="_blank">GameMaker</a></td>
             <td><img src="../../images/gamemaker.png" alt="" width="100" height="100"></td>
             <td>GameMaker - это интегрированная среда разработки игр для начинающих разработчиков. Она позволяет создавать 2D-игры без написания кода, но также позволяет разработчикам использовать сценарии для создания более сложных игровых механик. GameMaker поддерживает различные платформы, такие как Windows, Mac и мобильные устройства.</td>
         </tr>
