Кофе шоп, и страны

--- a/CSS.intro/file8/index.html
+++ b/CSS.intro/file8/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="wrapper">
+    <div class="wrapper" name="top">
         <div class="photo-item">
             <div class="photo">
                 <img src="../file8/images/500pxRF_100050585.jpg" alt="">
@@ -39,5 +39,6 @@
             <div class="description"> Вид на гору</div>
         </div>
     </div>
+    <a id="btnTop" href="#top">Вверх</a>
 </body>
 </html>
