--- a/JS/First steps/P34 DOM Продолжение/index.html
+++ b/JS/First steps/P34 DOM Продолжение/index.html
@@ -13,6 +13,33 @@
     <input id="button4" type="submit" value="button1">
     <input id="button5" type="submit" value="button2">
 
+    <p id="elem1">text</p>
+    <p id="elem2">text</p>
+    <p id="elem3">text</p>
+    <p id="elem4">text</p>
+    <p id="elem5">text</p>
+
+    <p id="elem">text</p>
+    <input id="button" type="submit">
+
+    <p id="text">text</p>
+    <input id="textbutton" type="submit">
+    <input id="newtextbutton" type="submit">
+    <p id="num1">123</p>
+    <p id="num2">456</p>
+    <input type="submit" id="summary">
+
+    <div id="answer"></div>
+    <p id="number1">1</p>
+    <p id="number2">2</p>
+    <p id="number3">3</p>
+    <input type="submit" id="sum">
+
+    <p id="num">1</p>
+    <input type="submit" id="add">
+
+    <p id="newText">text</p>
+    <input type="submit" id="exclamation">
     <script src="script.js"></script>
 </body>
 </html>
