DOM and INNERHTML

--- a/JS/First steps/P34 DOM Страница/index.html
+++ b/JS/First steps/P34 DOM Страница/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <!--
     <input id="button1" type="submit">
     <input id="button2" type="submit">
     <input id="button3" type="submit">
@@ -25,6 +26,7 @@
     <p id="text">text</p>
     <input id="textbutton" type="submit">
     <input id="newtextbutton" type="submit">
+
     <p id="num1">123</p>
     <p id="num2">456</p>
     <input type="submit" id="summary">
@@ -40,6 +42,13 @@
 
     <p id="newText">text</p>
     <input type="submit" id="exclamation">
+    
+    <input id="elem" type="email">
+    <input id="submit" type="submit">
+    -->
+    <a href="https://youtube.com" id="link">AMONGAS</a>
+    <input type="submit" id="submit">
+    <p id="p"></p>
     <script src="script.js"></script>
 </body>
 </html>
