--- a/JS/First steps/P40 Forms/index.html
+++ b/JS/First steps/P40 Forms/index.html
@@ -25,11 +25,29 @@
      <input type="checkbox" id="check">
      <p id="text"></p>
      <input type="submit" id="button">
-          -->
+        
 
-
+ 
     <input type="text" id="inp1">
     <input type="text" id="inp2">
+
+    <input type="radio" name="radio" id="one" value="one">
+    <input type="radio" name="radio" id="two" value="two">
+    <input type="radio" name="radio" id="three" value="three">
+    <p id="text"></p>
+   
+     <input type="checkbox" id="checkbox">
+     <input type="submit" id="button">
+
+     <textarea id="text"></textarea>
+    <div id="div"></div>
+
+    <input type="checkbox" id="checkbox">
+    <div id="div"></div>
+    <button id="button">button</button>
+  -->
+    <input type="checkbox" id="checkbox">
+    <button id="btn">button</button>
 
     <script src="script.js"></script>
 </body>
