--- a/JS/First steps/P40 Forms/index.html
+++ b/JS/First steps/P40 Forms/index.html
@@ -30,7 +30,10 @@
  
     <input type="text" id="inp1">
     <input type="text" id="inp2">
-
+ 
+    <input type="text" id="inp3">
+   
+     <input type="checkbox" id="check">
     <input type="radio" name="radio" id="one" value="one">
     <input type="radio" name="radio" id="two" value="two">
     <input type="radio" name="radio" id="three" value="three">
