--- a/JS/First steps/Проект ToDoList/index.html
+++ b/JS/First steps/Проект ToDoList/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header class="header">
@@ -15,22 +16,25 @@
         </form>
     </header>
     <div class="todo-container">
-        <ul class="todo todo-list" id="todo">
-            <li class="todo-item"></li>
-            <span class="text-todo">Выпить кофе</span>
-            <div class="todo-buttons">
-                <button class="todo-remove"></button>
-                <button class="todo-complete"></button>
-            </div>
+        <ul class="todo-list" id="todo">
+            <li class="todo-item">
+                <span class="text-todo">Выпить кофе</span>
+                <div class="todo-buttons">
+                    <button class="todo-remove"></button>
+                    <button class="todo-complete"></button>
+                </div>
+            </li>
         </ul>
-        <ul class="todo todo-list" id="completed">
-            <li class="todo-item"></li>
-            <span class="text-todo">Сварить кофе</span>
-            <div class="todo-buttons">
-                <button class="todo-remove"></button>
-                <button class="todo-complete"></button>
-            </div>
+        <ul class="todo-completed" id="completed">
+            <li class="todo-item">
+                <span class="text-todo">Сварить кофе</span>
+                <div class="todo-buttons">
+                    <button class="todo-remove"></button>
+                    <button class="todo-complete"></button>
+                </div>
+            </li>
         </ul>
     </div>
+    <script src="js/script.js"></script>
 </body>
 </html>
