Music playlist complete

--- a/JS/First steps/Проект музикальный плеер/index.html
+++ b/JS/First steps/Проект музикальный плеер/index.html
@@ -212,7 +212,44 @@
         <audio class="audio" src="music/7.mp3"></audio>
 
       </li>
+      <li class="player__song">
 
+        <img class="player__img img" src="images/maxresdefault.jpg" alt="cover">
+
+        <p class="player__context">
+
+          <b class="player__song-name">Epilogue</b>
+          <span class="flex">
+
+            <span class="player__title">Creo</span>
+            <span class="player__song-time"></span>
+
+          </span>
+          
+        </p>
+
+        <audio class="audio" src="music/723714_Epilogue.mp3"></audio>
+
+      </li>
+      <li class="player__song">
+
+        <img class="player__img img" src="images/images (1).jpg" alt="cover">
+
+        <p class="player__context">
+
+          <b class="player__song-name">KICK BACK</b>
+          <span class="flex">
+
+            <span class="player__title">Kenshi Yonezu</span>
+            <span class="player__song-time"></span>
+
+          </span>
+          
+        </p>
+
+        <audio class="audio" src="music/Chainsaw Man Opening - KICK BACK_full.mp3"></audio>
+
+      </li>
     </ul>
 
   </div>
