--- a/JS/First steps/P53 Jquery/index.html
+++ b/JS/First steps/P53 Jquery/index.html
@@ -9,6 +9,20 @@
 <body>
     <h3>Hello</h3>
     <h3 class="zzz">Hi</h3>
+    <ul>
+        <li class="text">1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>4</li>
+        <li>5</li>
+        <li class="test">6</li>
+        <li>7</li>
+        <li>8</li>
+        <li>9</li>
+        <li>10</li>
+        <li>11</li>
+        <li class="www">12</li>
+    </ul>
     <script src="script.js"></script>
 </body>
 </html>
