jQuery events and widths

--- a/JS/First steps/P55 jQuery distances/index.html
+++ b/JS/First steps/P55 jQuery distances/index.html
@@ -4,19 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="jQuery.js"></script>
 </head>
 <body>
-
-    <h2>Hello</h2>
-    <h2>Hi</h2>
-    <div>
-        <p>
-            bello
-        </p>
-    </div>
-    <a href="youtube2.com" class="www">a</a>
-    <a href="youtube1.com" class="www">b</a>
-    <script src="jQuery.js"></script>
+    <div id="container"></div>
     <script src="script.js"></script>
     
 </body>
