--- a/JS/First steps/P56 jQuery events/index.html
+++ b/JS/First steps/P56 jQuery events/index.html
@@ -4,20 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="jQuery.js"></script>
 </head>
 <body>
-
-    <h2>Hello</h2>
-    <h2>Hi</h2>
-    <div>
-        <p>
-            bello
-        </p>
-    </div>
-    <a href="youtube2.com" class="www">a</a>
-    <a href="youtube1.com" class="www">b</a>
-    <script src="jQuery.js"></script>
+    <p>click</p>
+    <a href="#">link</a>
     <script src="script.js"></script>
-    
 </body>
 </html>
