--- a/JS/First steps/P56 jQuery events/index.html
+++ b/JS/First steps/P56 jQuery events/index.html
@@ -9,6 +9,16 @@
 <body>
     <p>click</p>
     <a href="#">link</a>
+    <input type="text" value="1">
+    <input type="text" value="2">
+    <input type="text" value="3">
+    <p id="test"></p>
+
+    <p>1</p>
+    
+    <p>2</p>
+    
+    <p>3</p>
     <script src="script.js"></script>
 </body>
 </html>
