--- a/JS/First steps/Проект притяжения и отталкивания/index.html
+++ b/JS/First steps/Проект притяжения и отталкивания/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <canvas id="canvas"></canvas>
+    <canvas id="canvas" width="2000px" height="2000px"></canvas>
     <script src="script.js"></script>
 </body>
 </html>
