Project Spa website

--- a/JS/First steps/Project spa news website/simpleNews/index.html
+++ b/JS/First steps/Project spa news website/simpleNews/index.html
@@ -26,15 +26,15 @@
                 <div>Погода</div>
             </nav>
             <div>
-                <img src="./public/search.svg" alt="">
-                <img src="./public/user_logo.svg" alt="">
-                <img src="./public/add.svg" alt="">  
+                <img src="../public/search.png" alt="">
+                <img src="../public/user_logo.png" alt="">
+                <img src="../public/add.png" alt="">  
             </div>
         </div>
     </header>
     <main>
-        <div class="main-news-container">
-            <div class="big-news-container">
+        <div class="main-news-container" id="main-news-container">
+            <div class="big-news-container" style="display: none;">
                 <a href="./news.html">
                     <img src="../public/news1.png" id="big-image" alt="">
                 </a>
@@ -119,6 +119,6 @@
             </div>
         </div>
     </main>
-    
+    <script type="module" src="../src/index.js"></script>
 </body>
 </html>
