spa website almost done

--- a/JS/First steps/Project-spa/index.html
+++ b/JS/First steps/Project-spa/index.html
@@ -249,7 +249,9 @@
         </div>
     </div>
 </main>
+
 <script src="./src/index.js" type="module"></script>
 <script src="./src/header.js" type="module"></script>
+<script src="./src/addNews.js" type="module"></script>
 </body>
 </html>
